added task 2 part 2 number task 6 through 8. this part still needs to be changed due to AI similarities
and added an incorrect short version of task 2 part 1

--- a/Assignment 2/Task 2 Part 2.ipynb
+++ b/Assignment 2/Task 2 Part 2.ipynb
@@ -2,83 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "29210e73",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T19:16:30.336409Z",
+     "start_time": "2025-10-06T19:16:30.332478Z"
+    }
+   },
    "source": [
+    "from email.header import Header\n",
+    "\n",
     "import numpy as np\n",
-    "import pandas as pd"
-   ]
+    "import pandas as pd\n",
+    "import Levenshtein as lev\n",
+    "from py_stringmatching import similarity_measure as sm\n",
+    "from itertools import combinations"
+   ],
+   "outputs": [],
+   "execution_count": 67
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "82e52786",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T19:16:30.397054Z",
+     "start_time": "2025-10-06T19:16:30.368614Z"
+    }
+   },
    "source": [
     "df_ACM = pd.read_csv(\"ACM.csv\")\n",
-    "df_DB = pd.read_csv(\"DBLP2.csv\", encoding=\"latin1\") "
-   ]
+    "df_DB = pd.read_csv(\"DBLP2.csv\", encoding=\"latin1\")\n",
+    "\n"
+   ],
+   "outputs": [],
+   "execution_count": 68
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "2a0b5ed6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T19:16:30.424921Z",
+     "start_time": "2025-10-06T19:16:30.403700Z"
+    }
+   },
    "source": [
     "# 1\n",
     "# Concatenate all columns per row into one string\n",
     "df_DB[\"merged\"] = df_DB.astype(str).agg(\" \".join, axis=1)\n",
     "df_ACM[\"merged\"] = df_ACM.astype(str).agg(\" \".join, axis =1)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 69
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "4686722e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T19:16:30.437256Z",
+     "start_time": "2025-10-06T19:16:30.431945Z"
+    }
+   },
    "source": [
     "# 2\n",
     "df_DB[\"merged\"] = df_DB[\"merged\"].str.lower()\n",
     "df_ACM[\"merged\"] = df_ACM[\"merged\"].str.lower()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 70
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "6d1dd9b8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T19:16:30.469751Z",
+     "start_time": "2025-10-06T19:16:30.443754Z"
+    }
+   },
    "source": [
     "#3\n",
     "df_DB[\"merged\"] = df_DB[\"merged\"].str.replace(r\"\\s+\", \" \", regex=True).str.strip()\n",
     "df_ACM[\"merged\"] = df_ACM[\"merged\"].str.replace(r\"\\s+\", \" \", regex=True).str.strip()\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 71
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "0aa4d147",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T20:00:23.108946Z",
+     "start_time": "2025-10-06T20:00:23.095856Z"
+    }
+   },
    "source": [
     "#4\n",
-    "list_ACM = df_ACM[\"merged\"]\n",
-    "list_DB  = df_DB[\"merged\"]\n",
+    "list_ACM = df_ACM[\"merged\"].tolist()\n",
+    "list_DB  = df_DB[\"merged\"].tolist()\n",
     "\n",
-    "big_list = list_ACM + list_DB"
-   ]
+    "big_list = list_ACM + list_DB\n",
+    "print(f\"Total length of big_list: {len(big_list)}\")  # Should be 4910"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total length of big_list: 4910\n"
+     ]
+    }
+   ],
+   "execution_count": 102
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "db523069",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T20:33:28.736374Z",
+     "start_time": "2025-10-06T20:31:02.404778Z"
+    }
+   },
    "source": [
     "#5 Shingle used from the lap\n",
     "def shingle(text, k: int) -> set:\n",
@@ -148,7 +196,6 @@
     "signatures = np.stack([get_signature(minhash_arr, vec) for vec in onehot])\n",
     "\n",
     "#  similarities\n",
-    "\n",
     "N = len(big_list)\n",
     "jac_mat = np.eye(N, dtype=float) # exact Jaccard similarity matrix\n",
     "mh_mat  = np.eye(N, dtype=float)  # MinHash similarity matrix\n",
@@ -161,50 +208,22 @@
     "\n",
     "        # MinHash-based similarity (fraction of equal signature components)\n",
     "        s_mh = compute_signature_similarity(signatures[i], signatures[j])\n",
+    "\n",
+    "\n",
     "        mh_mat[i, j] = mh_mat[j, i] = s_mh\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 122
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "70af7f8e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Example shingles (first 3 documents) ===\n",
-      "Doc 0: [' 19', ' an', ' ap', ' co', ' d.', ' da', ' de', ' en', ' fo', ' gl'] ... (249 total shingles)\n",
-      "Doc 1: [' 19', ' a ', ' an', ' ap', ' ba', ' co', ' cr', ' da', ' di', ' e.'] ... (258 total shingles)\n",
-      "Doc 2: [' 19', ' 20', ' ag', ' an', ' at', ' be', ' bo', ' co', ' da', ' fo'] ... (323 total shingles)\n",
-      "\n",
-      "=== Example MinHash signatures (first 3 documents) ===\n",
-      "Doc 0 signature: [ 13  70  37  14 125  45  36  12 174   2] ... (100 total hash values)\n",
-      "Doc 1 signature: [132  32   7  52  25  14  36  12  16  14] ... (100 total hash values)\n",
-      "Doc 2 signature: [54 32  2 63 25 14 36 12 16 56] ... (100 total hash values)\n",
-      "\n",
-      "=== Jaccard similarity matrix (rounded) ===\n",
-      "[[1.    0.176 0.182 ... 0.    0.    0.   ]\n",
-      " [0.176 1.    0.218 ... 0.    0.    0.   ]\n",
-      " [0.182 0.218 1.    ... 0.    0.    0.   ]\n",
-      " ...\n",
-      " [0.    0.    0.    ... 1.    0.    0.   ]\n",
-      " [0.    0.    0.    ... 0.    1.    0.   ]\n",
-      " [0.    0.    0.    ... 0.    0.    1.   ]]\n",
-      "\n",
-      "=== MinHash similarity matrix (rounded) ===\n",
-      "[[1.   0.18 0.19 ... 0.   0.   0.  ]\n",
-      " [0.18 1.   0.23 ... 0.   0.   0.  ]\n",
-      " [0.19 0.23 1.   ... 0.   0.   0.  ]\n",
-      " ...\n",
-      " [0.   0.   0.   ... 1.   1.   1.  ]\n",
-      " [0.   0.   0.   ... 1.   1.   1.  ]\n",
-      " [0.   0.   0.   ... 1.   1.   1.  ]]\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T20:30:34.757524Z",
+     "start_time": "2025-10-06T20:30:34.519358Z"
     }
-   ],
+   },
    "source": [
     "# print shingles\n",
     "print(\"\\n=== Example shingles (first 3 documents) ===\")\n",
@@ -222,7 +241,209 @@
     "\n",
     "print(\"\\n=== MinHash similarity matrix (rounded) ===\")\n",
     "print(np.round(mh_mat, 3))\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Example shingles (first 3 documents) ===\n",
+      "Doc 0: [' 19', ' co', ' da', ' go', ' in', ' ma', ' ob', ' of', ' on', ' sy'] ... (126 total shingles)\n",
+      "Doc 1: [' 19', ' a ', ' co', ' cr', ' da', ' di', ' f.', ' fo', ' in', ' is'] ... (147 total shingles)\n",
+      "Doc 2: [' 19', ' an', ' at', ' be', ' bo', ' co', ' da', ' he', ' in', ' ja'] ... (188 total shingles)\n",
+      "\n",
+      "=== Example MinHash signatures (first 3 documents) ===\n",
+      "Doc 0 signature: [ 18 183  46  11 268  23  13 149  28  86] ... (140 total hash values)\n",
+      "Doc 1 signature: [ 18 358  46  11  12  23 172 225 141  67] ... (140 total hash values)\n",
+      "Doc 2 signature: [ 18  27  46  11  12  15 142 112  98 178] ... (140 total hash values)\n",
+      "\n",
+      "=== Jaccard similarity matrix (rounded) ===\n",
+      "[[1.    0.252 0.256 ... 0.054 0.016 0.046]\n",
+      " [0.252 1.    0.255 ... 0.098 0.019 0.083]\n",
+      " [0.256 0.255 1.    ... 0.093 0.032 0.074]\n",
+      " ...\n",
+      " [0.054 0.098 0.093 ... 1.    0.071 0.082]\n",
+      " [0.016 0.019 0.032 ... 0.071 1.    0.037]\n",
+      " [0.046 0.083 0.074 ... 0.082 0.037 1.   ]]\n",
+      "\n",
+      "=== MinHash similarity matrix (rounded) ===\n",
+      "[[1.    0.314 0.25  ... 0.079 0.021 0.021]\n",
+      " [0.314 1.    0.329 ... 0.136 0.036 0.093]\n",
+      " [0.25  0.329 1.    ... 0.114 0.064 0.079]\n",
+      " ...\n",
+      " [0.079 0.136 0.114 ... 1.    0.086 0.093]\n",
+      " [0.021 0.036 0.064 ... 0.086 1.    0.014]\n",
+      " [0.021 0.093 0.079 ... 0.093 0.014 1.   ]]\n"
+     ]
+    }
+   ],
+   "execution_count": 119
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T20:38:58.785452Z",
+     "start_time": "2025-10-06T20:38:58.228336Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\"\"\" 6. Extract the top 2224 candidates from the LSH algorithm, compare them to the actual\n",
+    "    mappings in the file DBLP-ACM_perfectMapping.csv\n",
+    "    and compute the precision of the method.\"\"\"\n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "perfect_mapping_df = pd.read_csv(\"DBLP-ACM_perfectMapping.csv\")\n",
+    "# the following code is taken from lab 5\n",
+    "class LSH:\n",
+    "    \"\"\"\n",
+    "    Implements the Locality Sensitive Hashing (LSH) technique for approximate\n",
+    "    nearest neighbor search.\n",
+    "    \"\"\"\n",
+    "    buckets = []\n",
+    "    counter = 0\n",
+    "\n",
+    "    def __init__(self, b: int):\n",
+    "        \"\"\"\n",
+    "        Initializes the LSH instance with a specified number of bands.\n",
+    "\n",
+    "        Parameters:\n",
+    "        - b (int): The number of bands to divide the signature into.\n",
+    "        \"\"\"\n",
+    "        self.b = b\n",
+    "        for i in range(b):\n",
+    "            self.buckets.append({})\n",
+    "\n",
+    "    def make_subvecs(self, signature: np.ndarray) -> np.ndarray:\n",
+    "        \"\"\"\n",
+    "        Divides a given signature into subvectors based on the number of bands.\n",
+    "\n",
+    "        Parameters:\n",
+    "        - signature (np.ndarray): The MinHash signature to be divided.\n",
+    "\n",
+    "        Returns:\n",
+    "        - np.ndarray: A stacked array where each row is a subvector of the signature.\n",
+    "        \"\"\"\n",
+    "        l = len(signature)\n",
+    "        assert l % self.b == 0\n",
+    "        r = int(l / self.b)\n",
+    "        subvecs = []\n",
+    "        for i in range(0, l, r):\n",
+    "            subvecs.append(signature[i:i+r])\n",
+    "        return np.stack(subvecs)\n",
+    "\n",
+    "    def add_hash(self, signature: np.ndarray):\n",
+    "        \"\"\"\n",
+    "        Adds a signature to the appropriate LSH buckets based on its subvectors.\n",
+    "\n",
+    "        Parameters:\n",
+    "        - signature (np.ndarray): The MinHash signature to be hashed and added.\n",
+    "        \"\"\"\n",
+    "        subvecs = self.make_subvecs(signature).astype(str)\n",
+    "        for i, subvec in enumerate(subvecs):\n",
+    "            subvec = ','.join(subvec)\n",
+    "            if subvec not in self.buckets[i].keys():\n",
+    "                self.buckets[i][subvec] = []\n",
+    "            self.buckets[i][subvec].append(self.counter)\n",
+    "        self.counter += 1\n",
+    "\n",
+    "    def check_candidates(self) -> set:\n",
+    "        \"\"\"\n",
+    "        Identifies candidate pairs from the LSH buckets that could be potential near duplicates.\n",
+    "\n",
+    "        Returns:\n",
+    "        - set: A set of tuple pairs representing the indices of candidate signatures.\n",
+    "        \"\"\"\n",
+    "        candidates = []\n",
+    "        for bucket_band in self.buckets:\n",
+    "            keys = bucket_band.keys()\n",
+    "            for bucket in keys:\n",
+    "                hits = bucket_band[bucket]\n",
+    "                if len(hits) > 1:\n",
+    "                    candidates.extend(combinations(hits, 2))\n",
+    "        return set(candidates)\n",
+    "\n",
+    "n_buckets = 25\n",
+    "lsh = LSH(n_buckets)\n",
+    "for signature in signatures:\n",
+    "    lsh.add_hash(signature)\n",
+    "candidate_pairs = lsh.check_candidates()\n",
+    "\n",
+    "len_acm = len(df_ACM)\n",
+    "index_to_id = ([('ACM', df_ACM[\"id\"].iloc[i]) for i in range(len_acm)] +\n",
+    "               [('DBLP', df_DB[\"id\"].iloc[i]) for i in range(len(df_DB))])\n",
+    "\n",
+    "# Keep only cross-dataset candidates\n",
+    "cross_source_pairs = [(i, j) for (i, j) in candidate_pairs\n",
+    "                       if index_source_id[i][0] != index_source_id[j][0]]\n",
+    "\n",
+    "#  Score them using MinHash signature similarity\n",
+    "scored = []\n",
+    "for i, j in cross_source_pairs:\n",
+    "    sim = compute_signature_similarity(signatures[i], signatures[j])\n",
+    "    scored.append((sim, i, j))\n",
+    "\n",
+    "#  Sort by similarity and take top 2224\n",
+    "scored.sort(reverse=True, key=lambda x: x[0])\n",
+    "top_n = scored[:2224]\n",
+    "\n",
+    "#  Build predicted pairs (aligned with ground truth format)\n",
+    "pred_pairs = set()\n",
+    "for sim, i, j in top_n:\n",
+    "    # We know 'i' is from ACM and 'j' is from DBLP due to our filter\n",
+    "    id_acm = str(index_to_id[i][1])\n",
+    "    id_dblp = str(index_to_id[j][1])\n",
+    "    pred_pairs.add((id_dblp, id_acm)) # Add (idDBLP, idACM) tuple\n",
+    "\n",
+    "true_pairs = set(zip(perfect_mapping_df[\"idDBLP\"].astype(str),\n",
+    "                     perfect_mapping_df[\"idACM\"].astype(str)))\n",
+    "\n",
+    "#  Compute precision correctly\n",
+    "tp = len(pred_pairs.intersection(true_pairs))\n",
+    "fp = len(pred_pairs) - tp\n",
+    "precision = tp / len(pred_pairs) if pred_pairs else 0.0\n",
+    "\n",
+    "print(f\"Pairs in ground truth: {len(true_pairs)}\")\n",
+    "print(f\"Pairs predicted: {len(pred_pairs)}\")\n",
+    "print(f\"TP = {tp}, FP = {fp}, Precision = {precision:.4f}\")\n",
+    "end_time = time.time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"\\n---\")\n",
+    "print(f\"Total running time: {elapsed_time:.2f} seconds\")"
+   ],
+   "id": "e94696ac3334711c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pairs in ground truth: 2224\n",
+      "Pairs predicted: 2224\n",
+      "TP = 1835, FP = 389, Precision = 0.8251\n",
+      "\n",
+      "---\n",
+      "Total running time: 0.54 seconds\n"
+     ]
+    }
+   ],
+   "execution_count": 126
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "705d07febd8d79ae"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6b70764596c0b617"
   }
  ],
  "metadata": {
