added task 2 part 2 number task 6 through 8. this part still needs to be changed due to AI similarities
and added an incorrect short version of task 2 part 1

--- a/Assignment 2/Task 2 Part 2.ipynb
+++ b/Assignment 2/Task 2 Part 2.ipynb
@@ -374,7 +374,7 @@
     "index_to_id = ([('ACM', df_ACM[\"id\"].iloc[i]) for i in range(len_acm)] +\n",
     "               [('DBLP', df_DB[\"id\"].iloc[i]) for i in range(len(df_DB))])\n",
     "\n",
-    "# Keep only cross-dataset candidates\n",
+    "# Keep only candidates which contain both datasets\n",
     "cross_source_pairs = [(i, j) for (i, j) in candidate_pairs\n",
     "                       if index_source_id[i][0] != index_source_id[j][0]]\n",
     "\n",
@@ -388,7 +388,7 @@
     "scored.sort(reverse=True, key=lambda x: x[0])\n",
     "top_n = scored[:2224]\n",
     "\n",
-    "#  Build predicted pairs (aligned with ground truth format)\n",
+    "#  Build predicted pairs\n",
     "pred_pairs = set()\n",
     "for sim, i, j in top_n:\n",
     "    # We know 'i' is from ACM and 'j' is from DBLP due to our filter\n",
@@ -399,7 +399,7 @@
     "true_pairs = set(zip(perfect_mapping_df[\"idDBLP\"].astype(str),\n",
     "                     perfect_mapping_df[\"idACM\"].astype(str)))\n",
     "\n",
-    "#  Compute precision correctly\n",
+    "#  Compute precision\n",
     "tp = len(pred_pairs.intersection(true_pairs))\n",
     "fp = len(pred_pairs) - tp\n",
     "precision = tp / len(pred_pairs) if pred_pairs else 0.0\n",
