changed comments and code more up to standard

--- a/Assignment 2/Task 2 Part 2.ipynb
+++ b/Assignment 2/Task 2 Part 2.ipynb
@@ -5,21 +5,18 @@
    "id": "29210e73",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T19:16:30.336409Z",
-     "start_time": "2025-10-06T19:16:30.332478Z"
+     "end_time": "2025-10-06T21:09:45.948810Z",
+     "start_time": "2025-10-06T21:09:45.940809Z"
     }
    },
    "source": [
-    "from email.header import Header\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import Levenshtein as lev\n",
-    "from py_stringmatching import similarity_measure as sm\n",
-    "from itertools import combinations"
+    "from itertools import combinations\n",
+    "import time"
    ],
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 128
   },
   {
    "cell_type": "code",
@@ -32,8 +29,7 @@
    },
    "source": [
     "df_ACM = pd.read_csv(\"ACM.csv\")\n",
-    "df_DB = pd.read_csv(\"DBLP2.csv\", encoding=\"latin1\")\n",
-    "\n"
+    "df_DB = pd.read_csv(\"DBLP2.csv\", encoding=\"latin1\")"
    ],
    "outputs": [],
    "execution_count": 68
@@ -48,8 +44,7 @@
     }
    },
    "source": [
-    "# 1\n",
-    "# Concatenate all columns per row into one string\n",
+    "# 1. Concatenate all columns per row into one string\n",
     "df_DB[\"merged\"] = df_DB.astype(str).agg(\" \".join, axis=1)\n",
     "df_ACM[\"merged\"] = df_ACM.astype(str).agg(\" \".join, axis =1)"
    ],
@@ -66,7 +61,7 @@
     }
    },
    "source": [
-    "# 2\n",
+    "# 2. Change all alphabetical characters into lowercase.\n",
     "df_DB[\"merged\"] = df_DB[\"merged\"].str.lower()\n",
     "df_ACM[\"merged\"] = df_ACM[\"merged\"].str.lower()"
    ],
@@ -83,7 +78,7 @@
     }
    },
    "source": [
-    "#3\n",
+    "# 3. Convert multiple spaces to one.\n",
     "df_DB[\"merged\"] = df_DB[\"merged\"].str.replace(r\"\\s+\", \" \", regex=True).str.strip()\n",
     "df_ACM[\"merged\"] = df_ACM[\"merged\"].str.replace(r\"\\s+\", \" \", regex=True).str.strip()\n"
    ],
@@ -100,7 +95,7 @@
     }
    },
    "source": [
-    "#4\n",
+    "# 4. Combine the records from both tables into one big list as we did during the lab.\n",
     "list_ACM = df_ACM[\"merged\"].tolist()\n",
     "list_DB  = df_DB[\"merged\"].tolist()\n",
     "\n",
@@ -128,7 +123,7 @@
     }
    },
    "source": [
-    "#5 Shingle used from the lap\n",
+    "# 5. Use the functions in the tutorials from lab 5 to compute the shingles, the minhash signature and the similarity.\n",
     "def shingle(text, k: int) -> set:\n",
     "    \"\"\"Return set of k-shingles, robust to None/NaN/non-strings/short strings.\"\"\"\n",
     "    # Treat None/NaN as empty\n",
@@ -283,8 +278,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T20:38:58.785452Z",
-     "start_time": "2025-10-06T20:38:58.228336Z"
+     "end_time": "2025-10-06T21:21:47.986729Z",
+     "start_time": "2025-10-06T21:21:47.439962Z"
     }
    },
    "cell_type": "code",
@@ -292,7 +287,6 @@
     "\"\"\" 6. Extract the top 2224 candidates from the LSH algorithm, compare them to the actual\n",
     "    mappings in the file DBLP-ACM_perfectMapping.csv\n",
     "    and compute the precision of the method.\"\"\"\n",
-    "import time\n",
     "start_time = time.time()\n",
     "perfect_mapping_df = pd.read_csv(\"DBLP-ACM_perfectMapping.csv\")\n",
     "# the following code is taken from lab 5\n",
@@ -364,19 +358,24 @@
     "                    candidates.extend(combinations(hits, 2))\n",
     "        return set(candidates)\n",
     "\n",
+    "# 25 bands gives threshold around 0.7 similarity\n",
     "n_buckets = 25\n",
     "lsh = LSH(n_buckets)\n",
+    "\n",
     "for signature in signatures:\n",
     "    lsh.add_hash(signature)\n",
+    "\n",
     "candidate_pairs = lsh.check_candidates()\n",
     "\n",
+    "# built a list that gives each dataset an index position\n",
     "len_acm = len(df_ACM)\n",
-    "index_to_id = ([('ACM', df_ACM[\"id\"].iloc[i]) for i in range(len_acm)] +\n",
-    "               [('DBLP', df_DB[\"id\"].iloc[i]) for i in range(len(df_DB))])\n",
-    "\n",
-    "# Keep only candidates which contain both datasets\n",
-    "cross_source_pairs = [(i, j) for (i, j) in candidate_pairs\n",
-    "                       if index_source_id[i][0] != index_source_id[j][0]]\n",
+    "index_to_id = []\n",
+    "for i in range(len_acm):\n",
+    "    record_id = df_ACM[\"id\"].iloc[i]\n",
+    "    index_to_id.append((\"ACM\", record_id))\n",
+    "for i in range(len(df_DB)):\n",
+    "    record_id = df_DB[\"id\"].iloc[i]\n",
+    "    index_to_id.append((\"DBLP\", record_id))\n",
     "\n",
     "#  Score them using MinHash signature similarity\n",
     "scored = []\n",
@@ -388,13 +387,12 @@
     "scored.sort(reverse=True, key=lambda x: x[0])\n",
     "top_n = scored[:2224]\n",
     "\n",
-    "#  Build predicted pairs\n",
+    "#  create set of predicted pairs\n",
     "pred_pairs = set()\n",
     "for sim, i, j in top_n:\n",
-    "    # We know 'i' is from ACM and 'j' is from DBLP due to our filter\n",
     "    id_acm = str(index_to_id[i][1])\n",
     "    id_dblp = str(index_to_id[j][1])\n",
-    "    pred_pairs.add((id_dblp, id_acm)) # Add (idDBLP, idACM) tuple\n",
+    "    pred_pairs.add((id_dblp, id_acm))\n",
     "\n",
     "true_pairs = set(zip(perfect_mapping_df[\"idDBLP\"].astype(str),\n",
     "                     perfect_mapping_df[\"idACM\"].astype(str)))\n",
@@ -404,13 +402,12 @@
     "fp = len(pred_pairs) - tp\n",
     "precision = tp / len(pred_pairs) if pred_pairs else 0.0\n",
     "\n",
-    "print(f\"Pairs in ground truth: {len(true_pairs)}\")\n",
-    "print(f\"Pairs predicted: {len(pred_pairs)}\")\n",
-    "print(f\"TP = {tp}, FP = {fp}, Precision = {precision:.4f}\")\n",
+    "\n",
+    "print(\"precision =\", round(precision, 4))\n",
     "end_time = time.time()\n",
     "elapsed_time = end_time - start_time\n",
     "print(f\"\\n---\")\n",
-    "print(f\"Total running time: {elapsed_time:.2f} seconds\")"
+    "print(\"running time:\", round(elapsed_time, 2), \"seconds\")"
    ],
    "id": "e94696ac3334711c",
    "outputs": [
@@ -418,16 +415,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pairs in ground truth: 2224\n",
-      "Pairs predicted: 2224\n",
-      "TP = 1835, FP = 389, Precision = 0.8251\n",
+      "Precision = 0.8251\n",
       "\n",
       "---\n",
-      "Total running time: 0.54 seconds\n"
+      "Total running time: 0.53 seconds\n"
      ]
     }
    ],
-   "execution_count": 126
+   "execution_count": 130
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6ea5767ca20455de"
   },
   {
    "metadata": {},
