changed comments and code more up to standard

--- a/Assignment 2/Task 2 Part 2.ipynb
+++ b/Assignment 2/Task 2 Part 2.ipynb
@@ -286,7 +286,10 @@
    "source": [
     "\"\"\" 6. Extract the top 2224 candidates from the LSH algorithm, compare them to the actual\n",
     "    mappings in the file DBLP-ACM_perfectMapping.csv\n",
-    "    and compute the precision of the method.\"\"\"\n",
+    "    and compute the precision of the method.\n",
+    "    7. Record the running time of the method.\n",
+    "    8. Compare the precision and the running time in Parts 1 and 2.\"\"\"\n",
+    "\n",
     "start_time = time.time()\n",
     "perfect_mapping_df = pd.read_csv(\"DBLP-ACM_perfectMapping.csv\")\n",
     "# the following code is taken from lab 5\n",
