cross source pairs

--- a/Assignment 2/Task 2 Part 2.ipynb
+++ b/Assignment 2/Task 2 Part 2.ipynb
@@ -278,8 +278,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T21:21:47.986729Z",
-     "start_time": "2025-10-06T21:21:47.439962Z"
+     "end_time": "2025-10-06T21:55:55.980983Z",
+     "start_time": "2025-10-06T21:55:53.420788Z"
     }
    },
    "cell_type": "code",
@@ -380,6 +380,10 @@
     "    record_id = df_DB[\"id\"].iloc[i]\n",
     "    index_to_id.append((\"DBLP\", record_id))\n",
     "\n",
+    "# keep only the pairs where the two documents come from different sources\n",
+    "cross_source_pairs = [(i, j) for (i, j) in candidate_pairs\n",
+    "                      if index_source_id[i][0] != index_source_id[j][0]]\n",
+    "\n",
     "#  Score them using MinHash signature similarity\n",
     "scored = []\n",
     "for i, j in cross_source_pairs:\n",
@@ -418,14 +422,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 0.8251\n",
+      "precision = 0.8251\n",
       "\n",
       "---\n",
-      "Total running time: 0.53 seconds\n"
+      "running time: 2.53 seconds\n"
      ]
     }
    ],
-   "execution_count": 130
+   "execution_count": 132
   }
  ],
  "metadata": {
