--- a/Assignment 2/Task 2 Part 2.ipynb
+++ b/Assignment 2/Task 2 Part 2.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
    "id": "29210e73",
    "metadata": {
     "ExecuteTime": {
@@ -9,17 +10,30 @@
      "start_time": "2025-10-06T21:09:45.940809Z"
     }
    },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mitertools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m combinations\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from itertools import combinations\n",
     "import time"
-   ],
-   "outputs": [],
-   "execution_count": 128
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "82e52786",
    "metadata": {
     "ExecuteTime": {
@@ -27,15 +41,15 @@
      "start_time": "2025-10-06T19:16:30.368614Z"
     }
    },
+   "outputs": [],
    "source": [
     "df_ACM = pd.read_csv(\"ACM.csv\")\n",
     "df_DB = pd.read_csv(\"DBLP2.csv\", encoding=\"latin1\")"
-   ],
-   "outputs": [],
-   "execution_count": 68
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "2a0b5ed6",
    "metadata": {
     "ExecuteTime": {
@@ -43,16 +57,16 @@
      "start_time": "2025-10-06T19:16:30.403700Z"
     }
    },
+   "outputs": [],
    "source": [
     "# 1. Concatenate all columns per row into one string\n",
     "df_DB[\"merged\"] = df_DB.astype(str).agg(\" \".join, axis=1)\n",
     "df_ACM[\"merged\"] = df_ACM.astype(str).agg(\" \".join, axis =1)"
-   ],
-   "outputs": [],
-   "execution_count": 69
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "4686722e",
    "metadata": {
     "ExecuteTime": {
@@ -60,16 +74,16 @@
      "start_time": "2025-10-06T19:16:30.431945Z"
     }
    },
+   "outputs": [],
    "source": [
     "# 2. Change all alphabetical characters into lowercase.\n",
     "df_DB[\"merged\"] = df_DB[\"merged\"].str.lower()\n",
     "df_ACM[\"merged\"] = df_ACM[\"merged\"].str.lower()"
-   ],
-   "outputs": [],
-   "execution_count": 70
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "6d1dd9b8",
    "metadata": {
     "ExecuteTime": {
@@ -77,16 +91,16 @@
      "start_time": "2025-10-06T19:16:30.443754Z"
     }
    },
+   "outputs": [],
    "source": [
     "# 3. Convert multiple spaces to one.\n",
     "df_DB[\"merged\"] = df_DB[\"merged\"].str.replace(r\"\\s+\", \" \", regex=True).str.strip()\n",
     "df_ACM[\"merged\"] = df_ACM[\"merged\"].str.replace(r\"\\s+\", \" \", regex=True).str.strip()\n"
-   ],
-   "outputs": [],
-   "execution_count": 71
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "0aa4d147",
    "metadata": {
     "ExecuteTime": {
@@ -94,14 +108,6 @@
      "start_time": "2025-10-06T20:00:23.095856Z"
     }
    },
-   "source": [
-    "# 4. Combine the records from both tables into one big list as we did during the lab.\n",
-    "list_ACM = df_ACM[\"merged\"].tolist()\n",
-    "list_DB  = df_DB[\"merged\"].tolist()\n",
-    "\n",
-    "big_list = list_ACM + list_DB\n",
-    "print(f\"Total length of big_list: {len(big_list)}\")  # Should be 4910"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -111,10 +117,18 @@
      ]
     }
    ],
-   "execution_count": 102
+   "source": [
+    "# 4. Combine the records from both tables into one big list as we did during the lab.\n",
+    "list_ACM = df_ACM[\"merged\"].tolist()\n",
+    "list_DB  = df_DB[\"merged\"].tolist()\n",
+    "\n",
+    "big_list = list_ACM + list_DB\n",
+    "print(f\"Total length of big_list: {len(big_list)}\")  # Should be 4910"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "db523069",
    "metadata": {
     "ExecuteTime": {
@@ -122,6 +136,7 @@
      "start_time": "2025-10-06T20:31:02.404778Z"
     }
    },
+   "outputs": [],
    "source": [
     "# 5. Use the functions in the tutorials from lab 5 to compute the shingles, the minhash signature and the similarity.\n",
     "def shingle(text, k: int) -> set:\n",
@@ -206,83 +221,30 @@
     "\n",
     "\n",
     "        mh_mat[i, j] = mh_mat[j, i] = s_mh\n"
-   ],
-   "outputs": [],
-   "execution_count": 122
+   ]
   },
   {
    "cell_type": "code",
-   "id": "70af7f8e",
+   "execution_count": null,
+   "id": "e94696ac3334711c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T20:30:34.757524Z",
-     "start_time": "2025-10-06T20:30:34.519358Z"
+     "end_time": "2025-10-06T21:21:47.986729Z",
+     "start_time": "2025-10-06T21:21:47.439962Z"
     }
    },
-   "source": [
-    "# print shingles\n",
-    "print(\"\\n=== Example shingles (first 3 documents) ===\")\n",
-    "for i, s in enumerate(shingle_sets[:3]):\n",
-    "    print(f\"Doc {i}: {sorted(list(s))[:10]} ... ({len(s)} total shingles)\")\n",
-    "\n",
-    "# Print MinHash signatures\n",
-    "print(\"\\n=== Example MinHash signatures (first 3 documents) ===\")\n",
-    "for i, sig in enumerate(signatures[:3]):\n",
-    "    print(f\"Doc {i} signature: {sig[:10]} ... ({len(sig)} total hash values)\")\n",
-    "\n",
-    "# Print Jaccard & MinHash similarities\n",
-    "print(\"\\n=== Jaccard similarity matrix (rounded) ===\")\n",
-    "print(np.round(jac_mat, 3))\n",
-    "\n",
-    "print(\"\\n=== MinHash similarity matrix (rounded) ===\")\n",
-    "print(np.round(mh_mat, 3))\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Precision = 0.8251\n",
       "\n",
-      "=== Example shingles (first 3 documents) ===\n",
-      "Doc 0: [' 19', ' co', ' da', ' go', ' in', ' ma', ' ob', ' of', ' on', ' sy'] ... (126 total shingles)\n",
-      "Doc 1: [' 19', ' a ', ' co', ' cr', ' da', ' di', ' f.', ' fo', ' in', ' is'] ... (147 total shingles)\n",
-      "Doc 2: [' 19', ' an', ' at', ' be', ' bo', ' co', ' da', ' he', ' in', ' ja'] ... (188 total shingles)\n",
-      "\n",
-      "=== Example MinHash signatures (first 3 documents) ===\n",
-      "Doc 0 signature: [ 18 183  46  11 268  23  13 149  28  86] ... (140 total hash values)\n",
-      "Doc 1 signature: [ 18 358  46  11  12  23 172 225 141  67] ... (140 total hash values)\n",
-      "Doc 2 signature: [ 18  27  46  11  12  15 142 112  98 178] ... (140 total hash values)\n",
-      "\n",
-      "=== Jaccard similarity matrix (rounded) ===\n",
-      "[[1.    0.252 0.256 ... 0.054 0.016 0.046]\n",
-      " [0.252 1.    0.255 ... 0.098 0.019 0.083]\n",
-      " [0.256 0.255 1.    ... 0.093 0.032 0.074]\n",
-      " ...\n",
-      " [0.054 0.098 0.093 ... 1.    0.071 0.082]\n",
-      " [0.016 0.019 0.032 ... 0.071 1.    0.037]\n",
-      " [0.046 0.083 0.074 ... 0.082 0.037 1.   ]]\n",
-      "\n",
-      "=== MinHash similarity matrix (rounded) ===\n",
-      "[[1.    0.314 0.25  ... 0.079 0.021 0.021]\n",
-      " [0.314 1.    0.329 ... 0.136 0.036 0.093]\n",
-      " [0.25  0.329 1.    ... 0.114 0.064 0.079]\n",
-      " ...\n",
-      " [0.079 0.136 0.114 ... 1.    0.086 0.093]\n",
-      " [0.021 0.036 0.064 ... 0.086 1.    0.014]\n",
-      " [0.021 0.093 0.079 ... 0.093 0.014 1.   ]]\n"
+      "---\n",
+      "Total running time: 0.53 seconds\n"
      ]
     }
    ],
-   "execution_count": 119
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-06T21:55:55.980983Z",
-     "start_time": "2025-10-06T21:55:53.420788Z"
-    }
-   },
-   "cell_type": "code",
    "source": [
     "\"\"\" 6. Extract the top 2224 candidates from the LSH algorithm, compare them to the actual\n",
     "    mappings in the file DBLP-ACM_perfectMapping.csv\n",
@@ -380,10 +342,6 @@
     "    record_id = df_DB[\"id\"].iloc[i]\n",
     "    index_to_id.append((\"DBLP\", record_id))\n",
     "\n",
-    "# keep only the pairs where the two documents come from different sources\n",
-    "cross_source_pairs = [(i, j) for (i, j) in candidate_pairs\n",
-    "                      if index_source_id[i][0] != index_source_id[j][0]]\n",
-    "\n",
     "#  Score them using MinHash signature similarity\n",
     "scored = []\n",
     "for i, j in cross_source_pairs:\n",
@@ -415,21 +373,7 @@
     "elapsed_time = end_time - start_time\n",
     "print(f\"\\n---\")\n",
     "print(\"running time:\", round(elapsed_time, 2), \"seconds\")"
-   ],
-   "id": "e94696ac3334711c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "precision = 0.8251\n",
-      "\n",
-      "---\n",
-      "running time: 2.53 seconds\n"
-     ]
-    }
-   ],
-   "execution_count": 132
+   ]
   }
  ],
  "metadata": {
@@ -448,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
