--- a/Assignment 3/Assignment 3.qmd
+++ b/Assignment 3/Assignment 3.qmd
@@ -1,10 +1,10 @@
 ---
 title: "Supervised learning competition"
 author: 
-  - Author One
+  - Osaro Orebor 1168827
   - Author Two
   - Author Three
-date: last-modified
+date: 1010-2025 12:00 AM
 format:
   html:
     toc: true
